--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .app {
     background-color: #fff;
-    min-width: 1080px;
+    width: 100%;
     border-radius: 20px;
     box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.04);
     min-height: 500px;
